--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@nicknisi/standard/tsconfigs/bundler",
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
