--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   },
   "dependencies": {
     "@material-ui/core": "4",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.0",
+    "i18next-resources-to-backend": "^1.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-i18next": "^14.1.0"
   },
   "devDependencies": {
     "@nicknisi/standard": "^0.1.0",
