--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,11 +1,13 @@
 {
-  "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "strict": true
-  },
-  "include": ["vite.config.ts"]
+	"extends": "@nicknisi/standard/tsconfigs/base",
+	"compilerOptions": {
+		"composite": true,
+		"skipLibCheck": true,
+		"module": "ESNext",
+		"moduleResolution": "bundler",
+		"allowSyntheticDefaultImports": true,
+		"strict": true,
+		"typeRoots": ["node_modules/@types", "src/types"]
+	},
+	"include": ["vite.config.ts", "scripts/"]
 }
