--- a/package.json
+++ b/package.json
@@ -1,41 +1,45 @@
 {
-  "name": "sample-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "format": "prettier --check --write src/*"
-  },
-  "dependencies": {
-    "@material-ui/core": "4",
-    "i18next": "^23.10.1",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.5.0",
-    "i18next-resources-to-backend": "^1.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-i18next": "^14.1.0"
-  },
-  "devDependencies": {
-    "@nicknisi/standard": "^0.1.0",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.36",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.6"
-  }
+	"name": "sample-app",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview",
+		"format": "prettier --check --write src/*",
+		"analyze": "node --import=tsimp/import scripts/analyze.ts"
+	},
+	"dependencies": {
+		"@material-ui/core": "4",
+		"i18next": "23.10.1",
+		"i18next-browser-languagedetector": "7.2.0",
+		"i18next-http-backend": "2.5.0",
+		"i18next-resources-to-backend": "1.2.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-i18next": "14.1.0"
+	},
+	"devDependencies": {
+		"@nicknisi/standard": "0.1.0",
+		"@types/node": "20.11.29",
+		"@types/react": "17.0.79",
+		"@types/react-dom": "17.0.25",
+		"@typescript-eslint/eslint-plugin": "7.1.1",
+		"@typescript-eslint/parser": "7.1.1",
+		"@vitejs/plugin-react": "4.2.1",
+		"autoprefixer": "10.4.18",
+		"eslint": "8.57.0",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"eslint-plugin-react-refresh": "0.4.5",
+		"glob": "10.3.10",
+		"postcss": "8.4.36",
+		"prettier": "3.2.5",
+		"prettier-plugin-tailwindcss": "0.5.12",
+		"tailwindcss": "3.4.1",
+		"tsimp": "2.0.11",
+		"typescript": "5.2.2",
+		"vite": "5.1.6"
+	}
 }
