--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,8 +6,7 @@
 		"module": "ESNext",
 		"moduleResolution": "bundler",
 		"allowSyntheticDefaultImports": true,
-		"strict": true,
-		"typeRoots": ["node_modules/@types", "src/types"]
+		"strict": true
 	},
 	"include": ["vite.config.ts", "scripts/"]
 }
