--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "sample-app",
+	"name": "ts-compiler-api-talk",
 	"private": true,
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
