--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	],
 	"dependencies": {
 		"@material-ui/core": "4",
+		"chalk": "^5.3.0",
 		"clsx": "^2.1.0",
 		"i18next": "23.10.1",
 		"i18next-browser-languagedetector": "7.2.0",
@@ -31,7 +32,8 @@
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-i18next": "14.1.0",
-		"tailwind-merge": "^2.2.2"
+		"tailwind-merge": "^2.2.2",
+		"ts-morph": "^23.0.0"
 	},
 	"devDependencies": {
 		"@nicknisi/standard": "0.1.0",
