--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"format": "prettier --check --write src/*",
 		"analyze": "node --import=tsimp/import scripts/bin/analyze.ts",
 		"convert": "node --import=tsimp/import scripts/bin/convert.ts",
-		"start": "vite"
+		"start": "vite",
+		"test": "vitest"
 	},
 	"bin": {
 		"convert": "./dist/bin/convert.js",
@@ -55,6 +56,7 @@
 		"tailwindcss": "3.4.1",
 		"tsimp": "^2.0.10",
 		"typescript": "5.5.2",
-		"vite": "5.3.1"
+		"vite": "5.3.1",
+		"vitest": "^2.0.5"
 	}
 }
