--- a/tsconfig.scripts.json
+++ b/tsconfig.scripts.json
@@ -9,7 +9,8 @@
 		"baseUrl": "./",
 		"declaration": false,
 		"declarationMap": false,
-		"useUnknownInCatchVariables": false
+		"useUnknownInCatchVariables": false,
+		"types": ["vitest/globals"]
 	},
 	"include": ["scripts/**/*.ts"]
 }
